[package]
name = "solana-sniper-bot"
version = "2.1.0"
edition = "2021"
authors = ["ATOM <contact@tryatom.com>"]
description = "High-frequency Solana liquidity sniper and copy-trading engine"

[dependencies]
solana-client = "1.16"
solana-sdk = "1.16"
jito-protos = "0.1"
jito-searcher-client = "0.1"
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
yellowstone-grpc-client = "0.1"
yellowstone-grpc-proto = "0.1"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
crossbeam-channel = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
